[gd_scene load_steps=5 format=3 uid="uid://b34b7c6cj3wqs"]

[ext_resource type="Script" path="res://scenes/interest_choices/interest_choices.gd" id="1_82gg4"]
[ext_resource type="Texture2D" uid="uid://cuf41mjhd26o1" path="res://assets/images/gradient2.png" id="2_kyqe3"]
[ext_resource type="PackedScene" uid="uid://whc30x5guvjx" path="res://scenes/id_button/id_button.tscn" id="2_vxhuh"]
[ext_resource type="Theme" uid="uid://70hskfqdsfpy" path="res://assets/fonts/Roboto/RobotoTheme.tres" id="3_3fqpf"]

[node name="InterestChoices" type="Node2D"]
script = ExtResource("1_82gg4")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -3.0
offset_top = -3.0
offset_right = 702.0
offset_bottom = 442.0
color = Color(0, 0, 0, 0.572549)

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 698.0
offset_bottom = 439.0
texture = ExtResource("2_kyqe3")
expand_mode = 1

[node name="SeparatingLineRect" type="ColorRect" parent="."]
offset_left = 36.0
offset_top = 285.0
offset_right = 679.0
offset_bottom = 294.0
color = Color(0, 0, 0, 0.419608)

[node name="Label" type="Label" parent="."]
offset_left = 4.0
offset_top = 11.0
offset_right = 691.0
offset_bottom = 47.0
theme = ExtResource("3_3fqpf")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Which Interest you Most? (1/3)"
horizontal_alignment = 1

[node name="InterestButton1" parent="." instance=ExtResource("2_vxhuh")]
position = Vector2(80, 62)
id = 1

[node name="InterestButton2" parent="." instance=ExtResource("2_vxhuh")]
position = Vector2(382, 62)
id = 2

[node name="InterestButton3" parent="." instance=ExtResource("2_vxhuh")]
position = Vector2(80, 180)
id = 3

[node name="InterestButton4" parent="." instance=ExtResource("2_vxhuh")]
position = Vector2(382, 180)
id = 4

[node name="InterestButtonNone" parent="." instance=ExtResource("2_vxhuh")]
position = Vector2(236, 319)

[connection signal="clicked" from="InterestButton1" to="." method="_on_interest_button_clicked"]
[connection signal="clicked" from="InterestButton2" to="." method="_on_interest_button_clicked"]
[connection signal="clicked" from="InterestButton3" to="." method="_on_interest_button_clicked"]
[connection signal="clicked" from="InterestButton4" to="." method="_on_interest_button_clicked"]
[connection signal="clicked" from="InterestButtonNone" to="." method="_on_interest_button_clicked"]
